// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass on fixtures/rules/Vue.vue 1`] = `
Array [
  Object {
    "column": 20,
    "line": 22,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 33,
    "line": 22,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 24,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 28,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 30,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 31,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 33,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 34,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 36,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 37,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/vue-no-async-computed-properties.vue 1`] = `
Array [
  Object {
    "column": 20,
    "line": 22,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 33,
    "line": 22,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 24,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 28,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 30,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 31,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 33,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 34,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 36,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 37,
    "rule": "vue/no-async-in-computed-properties",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/vue-no-dupe-attributes.vue 1`] = `
Array [
  Object {
    "column": 29,
    "line": 11,
    "rule": "vue/no-duplicate-attributes",
    "severity": 2,
  },
  Object {
    "column": 28,
    "line": 12,
    "rule": "vue/no-duplicate-attributes",
    "severity": 2,
  },
  Object {
    "column": 28,
    "line": 13,
    "rule": "vue/no-duplicate-attributes",
    "severity": 2,
  },
  Object {
    "column": 28,
    "line": 13,
    "rule": "vue/no-parsing-error",
    "severity": 2,
  },
  Object {
    "column": 18,
    "line": 14,
    "rule": "vue/valid-v-bind",
    "severity": 2,
  },
  Object {
    "column": 31,
    "line": 14,
    "rule": "vue/no-duplicate-attributes",
    "severity": 2,
  },
  Object {
    "column": 31,
    "line": 14,
    "rule": "vue/valid-v-bind",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 15,
    "rule": "vue/valid-template-root",
    "severity": 2,
  },
  Object {
    "column": 30,
    "line": 15,
    "rule": "vue/no-duplicate-attributes",
    "severity": 2,
  },
  Object {
    "column": 30,
    "line": 15,
    "rule": "vue/no-parsing-error",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/vue-no-dupe-keys.vue 1`] = `
Array [
  Object {
    "column": 9,
    "line": 11,
    "rule": "vue/no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 19,
    "rule": "vue/no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 23,
    "rule": "vue/no-dupe-keys",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/vue-no-reserved-keys.vue 1`] = `
Array [
  Object {
    "column": 9,
    "line": 7,
    "rule": "vue/no-reserved-keys",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 10,
    "rule": "vue/no-reserved-keys",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 11,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 16,
    "rule": "vue/no-reserved-keys",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 20,
    "rule": "vue/no-reserved-keys",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/vue-no-shared-component-data.vue 1`] = `
Array [
  Object {
    "column": 5,
    "line": 7,
    "rule": "vue/no-shared-component-data",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/vue-no-side-effects-in-computed-properties.vue 1`] = `
Array [
  Object {
    "column": 13,
    "line": 8,
    "rule": "vue/no-side-effects-in-computed-properties",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 13,
    "rule": "vue/no-side-effects-in-computed-properties",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/vue-no-template-key.vue 1`] = `
Array [
  Object {
    "column": 5,
    "line": 10,
    "rule": "vue/no-template-key",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 11,
    "rule": "vue/no-template-key",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 12,
    "rule": "vue/no-template-key",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 12,
    "rule": "vue/valid-template-root",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/vue-no-textarea-mustache.vue 1`] = `
Array [
  Object {
    "column": 5,
    "line": 9,
    "rule": "vue/valid-template-root",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 9,
    "rule": "vue/no-textarea-mustache",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/vue-no-unused-components.vue 1`] = `Array []`;

exports[`should pass on fixtures/rules/vue-no-use-vif-with-vfor.vue 1`] = `
Array [
  Object {
    "column": 5,
    "line": 12,
    "rule": "vue/valid-v-for",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 13,
    "rule": "vue/no-use-v-if-with-v-for",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 17,
    "rule": "vue/valid-template-root",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 17,
    "rule": "vue/valid-v-for",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 19,
    "rule": "vue/no-use-v-if-with-v-for",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/vue-require-v-for-key.vue 1`] = `Array []`;

exports[`should pass on fixtures/rules/vue-require-valid-default-prop.vue 1`] = `
Array [
  Object {
    "column": 9,
    "line": 31,
    "rule": "vue/no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 33,
    "rule": "vue/require-valid-default-prop",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 35,
    "rule": "vue/no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 37,
    "rule": "vue/require-valid-default-prop",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 41,
    "rule": "vue/require-valid-default-prop",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 43,
    "rule": "vue/no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 45,
    "rule": "vue/require-valid-default-prop",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 47,
    "rule": "vue/no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 49,
    "rule": "vue/require-valid-default-prop",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/vue-return-in-computed-property.vue 1`] = `
Array [
  Object {
    "column": 12,
    "line": 18,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 23,
    "rule": "vue/return-in-computed-property",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/vue-valid-directives.vue 1`] = `
Array [
  Object {
    "column": 10,
    "line": 12,
    "rule": "vue/valid-v-bind",
    "severity": 2,
  },
  Object {
    "column": 10,
    "line": 13,
    "rule": "vue/valid-v-bind",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 14,
    "rule": "vue/valid-template-root",
    "severity": 2,
  },
  Object {
    "column": 10,
    "line": 14,
    "rule": "vue/valid-v-bind",
    "severity": 2,
  },
]
`;
